# Text-RPG

./: CMakeLists.txt  LICENSE  README.md
assets/: areas.json  armors.json  creatures.json  doors.json  items.json  weapons.json
include/: Area.h  Armor.h  Battle.h  Creature.h  Dialogue.h  Door.h  Entity.h  EntityManager.h  Inventory.h  Item.h  Player.h  Weapon.h
src/: Area.cpp  Armor.cpp  Battle.cpp  Creature.cpp  Door.cpp  EntityManager.cpp  Inventory.cpp  Item.cpp  Main.cpp  Player.cpp  Weapon.cpp
